
1. New Features

2. Enhancements

[extensions] Ensure naming conventions for sources/sinks (#2685)
[pipeline-api] Improved the pickAny aggregate operation by supporting the deduct primitive (#2917)
[jdbc] Make the batch size limit configurable in the JDBC sink processor (#2888).

3. Fixes

[core] Jet now doesn't close System.out during JVM shutdown (#2649)

4. Breaking Changes

[jdbc] Added `batchLimit` parameter to `SinkProcessors.writeJdbcP()` method.

<<< END TEMPLATE FOR THE NEXT VERSION


** Hazelcast Jet 4.4 **

Hazelcast Jet 4.4 is based on IMDG version 4.1.1. Check out its Release
Notes here: https://docs.hazelcast.org/docs/rn/index.html#4-1-1 and,
for the Enterprise Edition,
here: https://docs.hazelcast.org/docs/ern/index.html#4-1-1

Members of the open source community that appear in these release notes:

@TomaszGaweda
@hhromic

Thank you for your valuable contributions!

1. New Features

[sql] SQL Beta: submit jobs to Jet from the command-line SQL shell.
  (#2595, #2636, #2648, #2654, #2665, #2729, #2763, #2788)

[file-api] [017] Unified API to create sources and sinks from file-like
  resources: local filesystem, Amazon S3, Azure Blob Storage and Data Lake
  Storage, Google Cloud Storage (#2518)

[kinesis] [018] Amazon Kinesis connector (#2656)

[pipeline-api] [016] Prevent event reordering: by default Jet reorders data
  for performance, now you can disable this to get strict event order where
  you need it.


2. Enhancements

[connectors] @hhromic improved the naming of source and sink stages
  across different connectors, bringing them all in line with the same
  convention `xSource` / `xSink` (#2685)

[pipeline-api] @TomaszGaweda added the `pipeline.isEmpty()` method that
  tells whether it contains any stage (#2659)

[core] @TomaszGaweda added the `jet.imdg.version.mismatch.check.disabled`
  config property that disables the enforcement of the exact IMDG dependency
  version. This allows adding IMDG quick fixes to the existing Jet release.